--- a/diretivas-proj/src/app/app.component.html
+++ b/diretivas-proj/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-card></app-card>
+<app-card *ngIf="isAliveCard; else anotherBlock"></app-card>
+<ng-template #anotherBlock>
+  <p>Olá, sou um bloco secreto.</p>
+</ng-template>
 <router-outlet></router-outlet>
