--- a/diretivas-proj/src/app/app.component.html
+++ b/diretivas-proj/src/app/app.component.html
@@ -1,3 +1,7 @@
+<app-comp-atributos>
+  <h2>Olá</h2>
+  <p>Eu vim de fora</p>
+</app-comp-atributos>
 <app-card *ngIf="isAliveCard; else anotherBlock"></app-card>
 <ng-template #anotherBlock>
   <p>Olá, sou um bloco secreto.</p>
