Desenvolvimento big card component.

--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,27 @@
-<p>big-card works!</p>
+<div class="container-big-card">
+
+  <div class="big-car-photo">
+    <img 
+      src="https://source.unsplash.com/random/?technology" 
+      alt="" 
+      srcset=""
+    >
+  </div>
+
+  <div class="big-car-title">
+    <h1>
+      <a href="#">
+        Lorem Ipsum dolor sit amet consectetur.
+      </a>
+    </h1>
+  </div>
+
+  <div class="big-car-description">
+    <p>
+      <a href="#">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe adipisci itaque reiciendis accusamus. Fugit doloribus odit, explicabo eos eveniet provident voluptatum deserunt, doloremque cumque repellendus dolores at numquam ex?
+      </a>
+    </p>
+  </div>
+
+</div>
