--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -1,6 +1,6 @@
 <div class="container-big-card">
 
-  <div class="big-car-photo">
+  <div class="big-card-photo">
     <img 
       src="https://source.unsplash.com/random/?technology" 
       alt="" 
@@ -8,7 +8,7 @@
     >
   </div>
 
-  <div class="big-car-title">
+  <div class="big-card-title">
     <h1>
       <a href="#">
         Lorem Ipsum dolor sit amet consectetur.
@@ -16,7 +16,7 @@
     </h1>
   </div>
 
-  <div class="big-car-description">
+  <div class="big-card-description">
     <p>
       <a href="#">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe adipisci itaque reiciendis accusamus. Fugit doloribus odit, explicabo eos eveniet provident voluptatum deserunt, doloremque cumque repellendus dolores at numquam ex?
