--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -3,5 +3,10 @@
   <div class="articles-main">
     <app-big-card></app-big-card>
   </div>
-  <div class="articles-others"></div>
+
+  <div class="articles-others">
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+  </div>
 </div>
