--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,20 @@
-<p>small-card works!</p>
+<div class="container-small-card">
+  <div class="container-small-card-content">
+    <div class="small-card-photo">
+      <img 
+        src="https://source.unsplash.com/random/?technology" 
+        alt="" 
+        srcset=""
+      >
+    </div>
+  
+    <div class="small-card-title">
+      <h1><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></h1>
+    </div>
+  </div>  
+
+  <div class="container-small-card-separator">
+    <hr>
+  </div>
+
+</div>
