Desenvolvimento menu bar component.

--- a/angular-blog/src/app/components/menu-bar/menu-bar.component.html
+++ b/angular-blog/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,20 @@
-<p>menu-bar works!</p>
+<div class="container-menu-bar">
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/matheuslunguinhomarchetti" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    </li>
+    <li>
+      <span>&bull;</span>
+    </li>
+    <li>
+      <a href="https://github.com/matheuslmarchetti" target="_blank" rel="noopener noreferrer">GitHub</a>
+    </li>
+    <li>
+      <span>&bull;</span>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/@marchetticodes" target="_blank" rel="noopener noreferrer">YouTube</a>
+    </li>
+  </ul>
+</div>
+<a href="https://github.com/matheuslmarchetti" target="_blank" rel="noopener noreferrer"></a>
