Desenvolvimento da dinâmica dos components.

--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -2,7 +2,7 @@
 
   <div class="big-card-photo">
     <img 
-      src="https://source.unsplash.com/random/?technology" 
+      src="{{photoCover}}" 
       alt="" 
       srcset=""
     >
@@ -10,17 +10,13 @@
 
   <div class="big-card-title">
     <h1>
-      <a href="#">
-        Lorem Ipsum dolor sit amet consectetur.
-      </a>
+      <a href="#">{{cardTitle}}</a>
     </h1>
   </div>
 
   <div class="big-card-description">
     <p>
-      <a href="#">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro saepe adipisci itaque reiciendis accusamus. Fugit doloribus odit, explicabo eos eveniet provident voluptatum deserunt, doloremque cumque repellendus dolores at numquam ex?
-      </a>
+      <a href="#">{{cardDescription}}</a>
     </p>
   </div>
 
