--- a/angular-blog/src/app/pages/home/home.component.html
+++ b/angular-blog/src/app/pages/home/home.component.html
@@ -5,12 +5,52 @@
 <app-menu-title></app-menu-title>
 <div class="container-articles">
   <div class="articles-main">
-    <app-big-card></app-big-card>
+    <app-big-card 
+      photoCover="https://source.unsplash.com/random/?technology"
+      cardTitle="Lorem ipsum dolor sit amet consectetur adipisicing elit."
+      cardDescription="Fugit doloribus odit, explicabo eos eveniet provident voluptatum deserunt, doloremque cumque repellendus dolores at numquam ex?"
+      >
+    </app-big-card>
+
+    <app-big-card 
+      photoCover="https://source.unsplash.com/random/?mobile"
+      cardTitle="Ipsam dolores praesentium repellat fuga ducimus est sapiente necessitatibus neque quaerat tempora?"
+      cardDescription="Maxime accusantium quasi ad possimus. Dicta corrupti ipsum quo ex vitae dolor ratione saepe, et ut vel fugit pariatur! Similique, dolores id?"
+      >
+    </app-big-card>
+
   </div>
 
   <div class="articles-others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      photoCover="https://source.unsplash.com/random/?computer"
+      cardTitle="Lorem ipsum dolor sit amet consectetur adipisicing elit."
+      >
+    </app-small-card>
+    <app-small-card
+      photoCover="https://source.unsplash.com/random/?tablet"
+      cardTitle="Amet error similique deserunt nihil quidem perspiciatis."
+      >
+    </app-small-card>
+    <app-small-card
+      photoCover="https://source.unsplash.com/random/?code"
+      cardTitle="Dolorum eius laborum molestias quas velit fuga alias corporis."
+      >
+    </app-small-card>
+    <app-small-card
+    photoCover="https://source.unsplash.com/random/?bigdata"
+    cardTitle="Illum sed unde, aliquam consectetur velit temporibus"
+    >
+  </app-small-card>
+  <app-small-card
+    photoCover="https://source.unsplash.com/random/?datacenter"
+    cardTitle="Autem voluptates alias dolorum sapiente quibusdam facere sequi voluptatibus."
+    >
+  </app-small-card>
+  <app-small-card
+    photoCover="https://source.unsplash.com/random/?developer"
+    cardTitle="Non optio assumenda hic dolorem voluptas."
+    >
+  </app-small-card>
   </div>
 </div>
