--- a/angular-blog/src/app/components/small-card/small-card.component.html
+++ b/angular-blog/src/app/components/small-card/small-card.component.html
@@ -2,14 +2,14 @@
   <div class="container-small-card-content">
     <div class="small-card-photo">
       <img 
-        src="https://source.unsplash.com/random/?technology" 
+        src="{{photoCover}}" 
         alt="" 
         srcset=""
       >
     </div>
   
     <div class="small-card-title">
-      <h1><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>  
 
