--- a/angular-blog/src/app/components/big-card/big-card.component.html
+++ b/angular-blog/src/app/components/big-card/big-card.component.html
@@ -10,13 +10,13 @@
 
   <div class="big-card-title">
     <h1>
-      <a href="#">{{cardTitle}}</a>
+      <a [routerLink]="['content', Id]">{{cardTitle}}</a>
     </h1>
   </div>
 
   <div class="big-card-description">
     <p>
-      <a href="#">{{cardDescription}}</a>
+      <a [routerLink]="['content', Id]">{{cardDescription}}</a>
     </p>
   </div>
 
