--- a/angular-blog/src/app/pages/content/content.component.css
+++ b/angular-blog/src/app/pages/content/content.component.css
@@ -1,11 +1,11 @@
 .container-content{
-  border: solid white 1px;
-  width: 100%;
-  height: 100vh;
+  width:99%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .content-cover > img{
@@ -18,6 +18,10 @@
 
 .content-description{
   margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .content-description > a{
@@ -28,4 +32,5 @@
 
 .content-description > p{
   color: rgb(177, 175, 175);
+  width: 50vw;
 }
