Development responsive max 300px

--- a/angular-blog/src/app/app.component.css
+++ b/angular-blog/src/app/app.component.css
@@ -3,3 +3,9 @@ header{
     display: flex;
     justify-content: center;
 }
+@media screen and (max-width: 450px) {
+    html{
+      max-width: 280px;
+      border: solid rgb(5, 211, 201) 1px;
+    }
+  }
