--- a/angular-blog/src/app/components/menu-title/menu-title.component.html
+++ b/angular-blog/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,9 @@
 <div class="container-menu-title">
-  <hr>
-    <h1>MARCHETTI BLOG</h1>
-  <hr>
+  <div>
+    <hr>
+  </div>
+  <h1>MARCHETTI BLOG</h1>
+  <div>
+    <hr>
+  </div>
 </div>
