--- a/angular-blog/src/app/components/menu-title/menu-title-responsive.component.css
+++ b/angular-blog/src/app/components/menu-title/menu-title-responsive.component.css
@@ -1,5 +1,19 @@
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 300px) {
+  .container-menu-title{
+    max-width: 280px;
+  }
+
   .container-menu-title > h1{
-    font-size: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+  }
+
+  .container-menu-title > hr{
+    margin-top: 20px;
+    margin-bottom: 5px;
+    width: 100%
   }
 }
