--- a/angular-blog/src/app/components/big-card/big-card-responsive.component.css
+++ b/angular-blog/src/app/components/big-card/big-card-responsive.component.css
@@ -2,6 +2,30 @@
   .container-big-card{
     max-width: 220px;
     height: 400px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .big-card-photo > img{
+    min-width: 220px;
+    min-height: 180px;
+    max-height: 180px;
+  }
+  
+  .big-card-title > h1{
+    text-align: center;
+  }
+  
+  .big-card-description{
+    margin-bottom: 100px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 301px) and (max-width: 600px){
+  .container-big-card{
+    max-width: 300px;
+    height: 400px;
     margin-top: 20px;
     justify-content: center;
     align-items: center;
@@ -20,5 +44,60 @@
   .big-card-description{
     margin-bottom: 100px;
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1000px){
+  .container-big-card{
+    max-width: 500px;
+    height: 400px;
+    margin-top: 150px;
+    padding-top: 300px;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .big-card-photo > img{
+    min-width: 520px;
+    min-height: 380px;
+    max-height: 380px;
+  }
+  
+  .big-card-title > h1{
+    text-align: center;
+  }
+  
+  .big-card-description{
+    margin-bottom: 500px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1300px){
+  .container-big-card{
+    width: 400px;
+    height: 400px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  
+  .big-card-photo > img{
+    width: 100%;
+    min-width: 400px;
+    min-height: 200px;
+    max-height: 200px;
+  }
+  
+  .big-card-title > h1{
+    font-size: 20px;
+    margin-top: 15px;
+  }
+  
+  .big-card-description{
+    margin-top: 20px;
   }
 }
