--- a/angular-blog/src/app/components/menu-bar/menu-bar-responsive.component.css
+++ b/angular-blog/src/app/components/menu-bar/menu-bar-responsive.component.css
@@ -20,3 +20,60 @@
     font-size: 0.8rem;    
   }
 }
+
+@media screen and (min-width: 301px) and (max-width: 600px) {  
+  .container-menu-bar > ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  
+  .container-menu-bar > ul >li{
+    margin-right: 10px;
+    list-style: none;
+  }
+
+  .container-menu-bar > ul > li > a{
+    font-size: 0.8rem;    
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {  
+  .container-menu-bar > ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  
+  .container-menu-bar > ul >li{
+    margin-right: 10px;
+    list-style: none;
+  }
+
+  .container-menu-bar > ul > li > a{
+    font-size: 1rem;    
+  }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1300px) {  
+  .container-menu-bar > ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  
+  .container-menu-bar > ul >li{
+    margin-right: 10px;
+    list-style: none;
+  }
+
+  .container-menu-bar > ul > li > a{
+    font-size: 1.5rem;    
+  }
+}
