--- a/angular-blog/src/app/components/small-card/small-card-responsive.component.css
+++ b/angular-blog/src/app/components/small-card/small-card-responsive.component.css
@@ -1,11 +1,9 @@
 @media screen and (max-width: 300px) {
   .container-small-card{
     width: 200px;
-    margin-bottom: 15px;
   }
 
   .container-small-card-content{
-    display: flex;
     flex-direction: column;
   }
 
@@ -17,13 +15,83 @@
   }
 
   .small-card-title{
+    text-align: center;
+    font-size: 8px;
+  }
+}
+
+@media screen and (min-width: 301px) and (max-width: 600px) {
+  .container-small-card{
+    width: 200px;
+  }
+
+  .container-small-card-content{
+    flex-direction: column;
+  }
+
+  .small-card-photo > img{
+    width: 100%;
+    min-width: 180px;
+    min-height: 150px;
+    max-height: 150px;
+  }
+
+  .small-card-title{
+    text-align: center;
+    font-size: 8px;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .container-small-card{
+    width: 400px;
+    /* margin-top: 50px; */
+  }
+
+  .container-small-card-content{
+    flex-direction: column;
+  }
+
+  .small-card-photo > img{
+    width: 100%;
+    min-width: 280px;
+    min-height: 250px;
+    max-height: 250px;
+  }
+
+  .small-card-title{
+    text-align: center;
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1300px) {
+  .container-small-card{
+    width: 300px;
+    margin-bottom: 15px;
+  }
+  
+  .container-small-card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .small-card-photo > img{
+    width: 150px;
+    min-width: 200px;
+    max-height: 100px;
+    margin-right: 20px;
+  }
+  
+  .small-card-title{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 8px;
+    font-size: 10px;
   }
-
+  
   .container-small-card-separator{
     margin-top: 10px;
   }
