--- a/services/src/app/components/card/card.component.css
+++ b/services/src/app/components/card/card.component.css
@@ -40,3 +40,9 @@
     padding: 5px;
     margin-right: 4px;
 }
+
+.card-body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
