--- a/services/src/app/components/card/card.component.html
+++ b/services/src/app/components/card/card.component.html
@@ -1,16 +1,17 @@
 <div class="card">
+    <input type="text" (input)="getPokemon($any($event.target).value)">
     <div class="card-title">
-        <h3>{{name}}</h3>
+        <h3>{{pokemon.name}}</h3>
     </div>
     <div class="card-body">
-        <img src="" alt="pokemon" srcset="">
+        <img [src]="pokemon.sprites.front_default" height="150" alt="pokemon" srcset="">
     </div>
     <div class="card-stats">
         <span 
             class="card-stats-type"    
-            *ngFor="let type of attributesTypes"
+            *ngFor="let tipo of pokemon.types"
         >
-            {{type}}
+            {{tipo.type.name}}
         </span>
     </div>
 </div>
