--- a/psn-store/src/app/components/menu-bar/menu-bar.component.html
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,16 @@
-<p>menu-bar works!</p>
+<div class="menu-bar-caontainer">
+    <div class="menu-bar-logo">
+        <img 
+            src="https://source.unsplash.com/random/?game" width="50px"
+            alt="" 
+            srcset=""
+        >
+    </div>
+    <div class="menu-bar-item">
+        <ul>
+            <li><a href="">YouTube</a></li>
+            <li><a href="">LinkedIn</a></li>
+            <li><a href="">GitHub</a></li>
+        </ul>
+    </div>
+</div>
