--- a/psn-store/src/app/components/menu-bar/menu-bar.component.html
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,11 @@
 <div class="menu-bar-caontainer">
     <div class="menu-bar-logo">
         <img 
-            src="https://source.unsplash.com/random/?game" width="50px"
+            src="assets/ps-logo.png"
             alt="" 
             srcset=""
+            width="140px"
+            height="32px"
         >
     </div>
     <div class="menu-bar-item">
