--- a/psn-store/src/app/components/menu-bar/menu-bar.component.css
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.css
@@ -5,4 +5,18 @@
     z-index: 999;
     background-color: #ffffff;
     width: 100%;
+    height: 40px;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
+}
+
+.menu-bar-logo{
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-bar-item{
+    display: flex;
+    margin: auto;
+    align-items: center;
 }
