--- a/psn-store/src/app/components/menu-bar/menu-bar.component.html
+++ b/psn-store/src/app/components/menu-bar/menu-bar.component.html
@@ -10,9 +10,9 @@
     </div>
     <div class="menu-bar-item">
         <ul>
-            <li><a href="">YouTube</a></li>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">GitHub</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">GitHub</a></li>
         </ul>
     </div>
 </div>
