Estilizando o card component

--- a/psn-store/src/app/components/card/card.component.html
+++ b/psn-store/src/app/components/card/card.component.html
@@ -1,5 +1,6 @@
 <a href="#" class="card-container">
-    <img 
+    <img
+        class="card-img" 
         src="assets/bt-5.jpg" 
         alt="" 
         srcset=""
