--- a/psn-store/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/psn-store/src/app/components/card/card-pricing/card-pricing.component.html
@@ -1,1 +1,14 @@
-<p>card-pricing works!</p>
+<div class="card-pricing-container">
+    <div class="card-pricing-title">
+        <h3>Play it Now!</h3>
+    </div>
+    <div class="card-pricing-value">
+        <div class="card-pricing-value-console">
+            <span>|</span>
+            <p>DIGITAL PS4</p>
+        </div>
+        <div class="card-pricing-value-money">
+            <p class="game-price">R$ 129,99</p>
+        </div>
+    </div>
+</div>
