--- a/psn-store/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/psn-store/src/app/components/card/card-pricing/card-pricing.component.html
@@ -5,10 +5,10 @@
     <div class="card-pricing-value">
         <div class="card-pricing-value-console">
             <span>|</span>
-            <p>DIGITAL PS4</p>
+            <p>{{gameType}}</p>
         </div>
         <div class="card-pricing-value-money">
-            <p class="game-price">R$ 129,99</p>
+            <p class="game-price">{{gamePrice }}</p>
         </div>
     </div>
 </div>
