Repassando parametros de componentes pais para filhos

--- a/psn-store/src/app/pages/home/home.component.html
+++ b/psn-store/src/app/pages/home/home.component.html
@@ -1,3 +1,44 @@
 <div class="home-container">
-    <app-card></app-card>
+    <app-card
+        gameCover="assets/bt-1.jpg"
+        gameLabel="Digital"
+        gameType="Digital | PS4"
+        gamePrice="R$ 129,99"
+    >
+    </app-card>
+    <app-card
+        gameCover="assets/bt-4.jpg"
+        gameLabel="Exclusive"
+        gameType="Disc | PS5"
+        gamePrice="R$ 279,99"
+    >
+    </app-card>
+    <app-card
+        gameCover="assets/bt-5.jpg"
+        gameLabel="Exclusive"
+        gameType="Disc | PS5"
+        gamePrice="R$ 399,99"
+    >
+    </app-card>
+    <app-card
+        gameCover="assets/bt-bad-company-2.jpg"
+        gameLabel="Exclusive"
+        gameType="Disc | PS5"
+        gamePrice="R$ 399,99"
+    >
+    </app-card>
+    <app-card
+        gameCover="assets/ac-cover.jpg"
+        gameLabel="Digital"
+        gameType="Digital | PS4"
+        gamePrice="R$ 189,99"
+    >
+    </app-card>
+    <app-card
+        gameCover="assets/bt-hardline.jpg"
+        gameLabel="New"
+        gameType="Disc | PS5"
+        gamePrice="R$ 389,99"
+    >
+    </app-card>
 </div>
