--- a/psn-store/src/app/components/card/card.component.html
+++ b/psn-store/src/app/components/card/card.component.html
@@ -1,13 +1,17 @@
 <a href="#" class="card-container">
     <img
         class="card-img" 
-        src="assets/bt-5.jpg" 
+        [src]=[gameCover] 
         alt="" 
         srcset=""
     >
     <app-card-label
-        gameLabel="Exclusive"
+        gameLabel="{{gameLabel}}"
     >
     </app-card-label>
-    <app-card-pricing></app-card-pricing>
+    <app-card-pricing
+        gameType="{{gameType}}"
+        gamePrice="{{gamePrice}}"
+    >
+    </app-card-pricing>
 </a>
