--- a/services/src/app/components/card/card.component.html
+++ b/services/src/app/components/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <input type="text" (input)="getPokemon($any($event.target).value)">
     <div class="card-title">
-        <h3>{{pokemon.name}}</h3>
+        <h3>{{pokemon.name | titlecase}}</h3>
     </div>
     <div class="card-body">
         <img [src]="pokemon.sprites.front_default" height="150" alt="pokemon" srcset="">
@@ -11,7 +11,7 @@
             class="card-stats-type"    
             *ngFor="let tipo of pokemon.types"
         >
-            {{tipo.type.name}}
+            {{tipo.type.name | uppercase}}
         </span>
     </div>
 </div>
