--- a/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
@@ -1,1 +1,23 @@
-<div class="quizz-container"></div>
+<div class="quizz-container">
+    <div class="quizz-logo">
+        <img src="assets/imgs/logo.png" alt="" srcset="">
+        <h3>Título</h3>
+    </div>
+
+    <div class="quizz-questions">
+        <h3>Questão selecionada</h3>
+    </div>
+
+    <div class="quizz-options">
+        <button
+            class="btn-option"
+        >
+            OptionName
+        </button>
+    </div>
+
+    <div class="quizz-results">
+        <h1>O seu resultado é:</h1>
+        <p>Resposta selecionada</p>
+    </div>
+</div>
