--- a/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
@@ -1,11 +1,11 @@
 <div class="quizz-container">
     <div class="quizz-logo">
         <img src="assets/imgs/logo.png" alt="" srcset="">
-        <h3>Título</h3>
+        <h3>{{title}}</h3>
     </div>
 
     <div class="quizz-questions">
-        <h3>Questão selecionada</h3>
+        <h3>{{questionsSelected.question}}</h3>
     </div>
 
     <div class="quizz-options">
@@ -16,7 +16,7 @@
         </button>
     </div>
 
-    <div class="quizz-results">
+    <div *ngIf=finished class="quizz-results">
         <h1>O seu resultado é:</h1>
         <p>Resposta selecionada</p>
     </div>
