Criando regras do jogo do projeto

--- a/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
@@ -10,9 +10,12 @@
 
     <div class="quizz-options">
         <button
+            *ngFor="let option of questionsSelected.options; 
+            let i = index"
+            (click)="playerChoose(option.alias)"
             class="btn-option"
         >
-            OptionName
+            {{option.name}}
         </button>
     </div>
 
