--- a/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
@@ -4,11 +4,11 @@
         <h3>{{title}}</h3>
     </div>
 
-    <div class="quizz-questions">
+    <div *ngIf=!finished class="quizz-questions">
         <h3>{{questionsSelected.question}}</h3>
     </div>
 
-    <div class="quizz-options">
+    <div *ngIf=!finished class="quizz-options">
         <button
             *ngFor="let option of questionsSelected.options; 
             let i = index"
@@ -21,6 +21,6 @@
 
     <div *ngIf=finished class="quizz-results">
         <h1>O seu resultado é:</h1>
-        <p>Resposta selecionada</p>
+        <p>{{answersSelected}}</p>
     </div>
 </div>
